spacing fix

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -473,6 +473,7 @@ width:300px;
 
 .hero2 {
   width:100%;
+  margin-top:4rem;
 }
 
 .hero4 {
@@ -522,6 +523,8 @@ margin-top:1rem;
 .panel5 {
   padding:2rem;
   height:50%;
+  margin-top:4rem;
+  margin-bottom:5rem;
 }
 
 .portfolio {
